vault-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: vault
